ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <label>Screen</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stages__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead details</fullName>
            </value>
            <value>
                <fullName>Capture current residential address</fullName>
            </value>
            <value>
                <fullName>Capture permanent residential address</fullName>
            </value>
            <value>
                <fullName>Capture PAN and other KYC</fullName>
            </value>
            <value>
                <fullName>Capture customer dedupe</fullName>
            </value>
            <value>
                <fullName>Vehicle dedupe</fullName>
            </value>
            <value>
                <fullName>Declared Income/Required Loan Amount</fullName>
            </value>
            <value>
                <fullName>Bank Account Check</fullName>
            </value>
            <value>
                <fullName>Gating And Screening</fullName>
            </value>
            <value>
                <fullName>Additional customer details</fullName>
            </value>
            <value>
                <fullName>Asset details</fullName>
            </value>
            <value>
                <fullName>Vehicle Insurance</fullName>
            </value>
            <value>
                <fullName>Vehicle Valuation</fullName>
            </value>
            <value>
                <fullName>Loan details</fullName>
            </value>
            <value>
                <fullName>Income detail</fullName>
            </value>
            <value>
                <fullName>Office Address for primary Income Source</fullName>
            </value>
            <value>
                <fullName>Existing EMI</fullName>
            </value>
            <value>
                <fullName>Offer Screen</fullName>
            </value>
            <value>
                <fullName>Additional customer code</fullName>
            </value>
            <value>
                <fullName>Insurance details</fullName>
            </value>
            <value>
                <fullName>Final offer Page</fullName>
            </value>
            <value>
                <fullName>View Applicant details</fullName>
            </value>
            <value>
                <fullName>CIBIL</fullName>
            </value>
            <value>
                <fullName>Field Investigation</fullName>
            </value>
            <value>
                <fullName>Validation IDV</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Final terms</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Risk summary</fullName>
            </value>
            <value>
                <fullName>Exposure Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>