ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tab (L1)</fullName>
            </value>
            <value>
                <fullName>Credit Verification</fullName>
            </value>
            <value>
                <fullName>Post Sanction</fullName>
            </value>
            <value>
                <fullName>Pre disbursement</fullName>
            </value>
            <value>
                <fullName>Payment Requests</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>