ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <formula>IF(Loan_Application__r.Bank_Branch_Detail__r.State_Code__c ==  $User.State_Code__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Code</label>
    <type>Checkbox</type>
</CustomField>