ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Status_of_lead__c.field-meta.xml
<CustomField>
    <fullName>Status_of_lead__c</fullName>
    <formula>IF(TEXT(Loan_Application__r.StageName)!=null,TEXT(Loan_Application__r.StageName),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan application stage</label>
    <type>Text</type>
</CustomField>