ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub - Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upload File</fullName>
            </value>
            <value>
                <fullName>Salesforce Login</fullName>
            </value>
            <value>
                <fullName>Integrator app Login</fullName>
            </value>
            <value>
                <fullName>OTP related</fullName>
            </value>
            <value>
                <fullName>Image Upload</fullName>
            </value>
            <value>
                <fullName>Bureau report</fullName>
            </value>
            <value>
                <fullName>Make / Model / Variant missing</fullName>
            </value>
            <value>
                <fullName>Dealer / Sub dealer name missing</fullName>
            </value>
            <value>
                <fullName>IRR related</fullName>
            </value>
            <value>
                <fullName>Carwale Pricing</fullName>
            </value>
            <value>
                <fullName>Scheme related</fullName>
            </value>
            <value>
                <fullName>Tenure / Loan amount / EMI amount</fullName>
            </value>
            <value>
                <fullName>CMU related</fullName>
            </value>
            <value>
                <fullName>Cases not listed</fullName>
            </value>
            <value>
                <fullName>Data error</fullName>
            </value>
            <value>
                <fullName>Data not retrieved</fullName>
            </value>
            <value>
                <fullName>AML related</fullName>
            </value>
            <value>
                <fullName>Upload or View image</fullName>
            </value>
            <value>
                <fullName>Scorecard / LTV / Pricing engine API</fullName>
            </value>
            <value>
                <fullName>Sanctioning</fullName>
            </value>
            <value>
                <fullName>CAM &amp; Deviations</fullName>
            </value>
            <value>
                <fullName>Additional Doc uploads</fullName>
            </value>
            <value>
                <fullName>IHM calculation</fullName>
            </value>
            <value>
                <fullName>Repayment method</fullName>
            </value>
            <value>
                <fullName>Agreement Stamping</fullName>
            </value>
            <value>
                <fullName>E-Agreement</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Valuation IDV</fullName>
            </value>
            <value>
                <fullName>Asset detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>