ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/TVR__c.field-meta.xml
<CustomField>
    <fullName>TVR__c</fullName>
    <formula>IF( RecordType.Name == &apos;TVR&apos;,IF(ISPICKVAL($User.UserType, &apos;PowerPartner&apos;), HYPERLINK(&quot;/s/tvr-page?c__recordId=&quot;+Id, &quot;Navigate to TVR&quot;, &quot;_self&quot;), HYPERLINK(&quot;/lightning/cmp/c__TVRApp?c__recordId=&quot;+Id, &quot;Navigate to TVR&quot;, &quot;_self&quot;)),&apos;&apos;)</formula>
    <label>TVR</label>
    <type>Text</type>
</CustomField>