ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/vehicle_category__c.field-meta.xml
<CustomField>
    <fullName>vehicle_category__c</fullName>
    <formula>Loan_Application__r.Vehicle_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Category</label>
    <type>Text</type>
</CustomField>