ProdIND/ProdPrograms/force-app/main/default/objects/Case/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <formula>Loan_Application__r.Vehicle_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Type</label>
    <type>Text</type>
</CustomField>