ProdIND/ProdPrograms/force-app/main/default/objects/Case/recordTypes/AML_Check.recordType-meta.xml
<RecordType>
    <fullName>AML_Check</fullName>
    <active>true</active>
    <businessProcess>AML Check</businessProcess>
    <description>Case record type for process AML Check</description>
    <label>AML Check</label>
</RecordType>