ProdIND/ProdPrograms/force-app/main/default/objects/Case/recordTypes/Asset_Verification.recordType-meta.xml
<RecordType>
    <fullName>Asset_Verification</fullName>
    <active>true</active>
    <businessProcess>Asset Verification</businessProcess>
    <label>Asset Verification</label>
</RecordType>