ProdIND/ProdPrograms/force-app/main/default/objects/Case/recordTypes/CMU_Request.recordType-meta.xml
<RecordType>
    <fullName>CMU_Request</fullName>
    <active>true</active>
    <businessProcess>CMU Request Support</businessProcess>
    <label>CMU Request</label>
</RecordType>