ProdIND/ProdPrograms/force-app/main/default/objects/Case/recordTypes/FI.recordType-meta.xml
<RecordType>
    <fullName>FI</fullName>
    <active>true</active>
    <businessProcess>FI Process</businessProcess>
    <label>FI</label>
</RecordType>