ProdIND/ProdPrograms/force-app/main/default/objects/Case/recordTypes/Off_Role_Emp_Approval.recordType-meta.xml
<RecordType>
    <fullName>Off_Role_Emp_Approval</fullName>
    <active>true</active>
    <businessProcess>off role empolye</businessProcess>
    <label>Off Role Emp Approval</label>
</RecordType>