ProdIND/ProdPrograms/force-app/main/default/objects/Case/recordTypes/Query.recordType-meta.xml
<RecordType>
    <fullName>Query</fullName>
    <active>true</active>
    <businessProcess>Query</businessProcess>
    <label>Query</label>
</RecordType>