ProdIND/ProdPrograms/force-app/main/default/objects/Case/recordTypes/RCU.recordType-meta.xml
<RecordType>
    <fullName>RCU</fullName>
    <active>true</active>
    <businessProcess>RCU Support</businessProcess>
    <label>RCU</label>
</RecordType>