ProdIND/ProdPrograms/force-app/main/default/objects/Case/recordTypes/TVR.recordType-meta.xml
<RecordType>
    <fullName>TVR</fullName>
    <active>true</active>
    <businessProcess>TeleVerification</businessProcess>
    <description>Case record type for process TeleVerification</description>
    <label>TVR</label>
</RecordType>