ProdIND/ProdPrograms/force-app/main/default/objects/Case/validationRules/Case_Owner_and_status_change_at_the_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Owner_and_status_change_at_the_same</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),OR(AND(NOT(AND(ISCHANGED(OwnerId),ISCHANGED(Status))),NOT(ISCHANGED(Status)),
Not(ISPICKVAL( Status , &quot;Closed&quot;)),Not(AND(ISPICKVAL( Status , &quot;New&quot;),Owner:Queue.DeveloperName=&quot;CMU&quot;)),
NOT( OR($UserRole.Name = &apos;CMU Team Lead&apos;,$Profile.Name == &quot;System Administrator&quot;)),
$RecordType.Name = &apos;CMU Request&apos;,
NOT(ISCHANGED( Reject_Count__c )),NOT((Owner_Change_from_flow__c == true))),AND(ISPICKVAL(PRIORVALUE(Status),&quot;Closed&quot;),ISPICKVAL( Status , &quot;Closed&quot;))),
NOT(ISPICKVAL(Loan_Application__r.StageName,&apos;Withdrawn&apos;)),
NOT(Loan_Application__r.Is_Revoked__c)
)</errorConditionFormula>
    <errorMessage>You do not have permission to change the owner of this case</errorMessage>
</ValidationRule>