ProdIND/ProdPrograms/force-app/main/default/objects/Case/validationRules/IBL_Support_Cases_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>IBL_Support_Cases_Read_Only</fullName>
    <active>false</active>
    <errorConditionFormula>(RecordType.DeveloperName = &quot;Incident&quot;) &amp;&amp;
NOT(ISNEW()) &amp;&amp;
$Profile.Name != &quot;System Administrator&quot; &amp;&amp;
$Profile.Name != &quot;IBL Support L1&quot; &amp;&amp;
$Profile.Name != &quot;IBL Support L2&quot; &amp;&amp;
$Profile.Name != &quot;IBL Support L2 V2&quot;</errorConditionFormula>
    <errorMessage>Please contact your System Administrator or the Support Team to edit any value.</errorMessage>
</ValidationRule>