ProdIND/ProdPrograms/force-app/main/default/objects/Case/validationRules/Incident_Manag_Status_field_read_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Incident_Manag_Status_field_read_only</fullName>
    <active>true</active>
    <errorConditionFormula>(RecordType.DeveloperName = &quot;Incident&quot;) &amp;&amp;
NOT(ISNEW()) &amp;&amp;
$Profile.Name != &quot;System Administrator&quot; &amp;&amp; ISCHANGED( Status )&amp;&amp; NOT(IsFlowvalidationBypassed__c)</errorConditionFormula>
    <errorMessage>You can&apos;t change the status field manually. Please contact system admin.</errorMessage>
</ValidationRule>