ProdIND/ProdPrograms/force-app/main/default/objects/Case/validationRules/incident_Priority_change_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>incident_Priority_change_restriction</fullName>
    <active>true</active>
    <errorConditionFormula>(Owner:Queue.DeveloperName=&quot;L1_Support&quot; ||Owner:Queue.DeveloperName=&quot;L2_Support&quot;) &amp;&amp; (RecordType.DeveloperName = &quot;Incident&quot;)&amp;&amp; NOT(ISNEW()) &amp;&amp; ISCHANGED( Priority )</errorConditionFormula>
    <errorMessage>You cannot change a priority when an incident is in the queue. Please accept the incident and then try.</errorMessage>
</ValidationRule>