ProdIND/ProdPrograms/force-app/main/default/objects/Case/validationRules/Stop_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Stop_Status_Change</fullName>
    <active>true</active>
    <description>Stop to change the Status for CMU</description>
    <errorConditionFormula>AND(
OR($Profile.Name = &apos;CMU&apos;, $Profile.Name = &apos;IBL Business Executive&apos;, $Profile.Name = &apos;IBL Marketing Officer&apos;, $Profile.Name = &apos;IBL Partner Community Counter Staff&apos;, $Profile.Name = &apos;IBL Partner Community Marketing Agent&apos;, $Profile.Name = &apos;IBL Partner Community Marketing Officer&apos;),
RecordType.DeveloperName = &apos;CMU_Request&apos;,
ISCHANGED( Status ), 
NOT(OR(
ISCHANGED( Description),
ISCHANGED( Agent_Work_Status__c),
ISCHANGED(  OwnerId  ),
ISCHANGED( Reason ),
If(TEXT( Loan_Application__r.StageName ) = &apos;Journey Restart&apos;, true, false)
))
)</errorConditionFormula>
    <errorMessage>You are not allowed to Change the Status.</errorMessage>
</ValidationRule>