ProdIND/ProdPrograms/force-app/main/default/objects/Case/listViews/All_RCU_Cases.listView-meta.xml
<ListView>
    <fullName>All_RCU_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Status_of_lead__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Agent_BL_Code__c</columns>
    <columns>District__c</columns>
    <columns>IncidentManagement_State__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.RCU</value>
    </filters>
    <label>All RCU Cases</label>
    <sharedTo>
        <role>National_RCU_Manager</role>
        <role>RCU_Manager</role>
    </sharedTo>
</ListView>