ProdIND/ProdPrograms/force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Loan_Application__c</columns>
    <columns>Applicant__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LOB_formulae__c</field>
        <operation>equals</operation>
        <value>PV</value>
    </filters>
    <filters>
        <field>Case_Owner_Custom__c</field>
        <operation>equals</operation>
        <value>RAJESH VENKATESH</value>
    </filters>
    <filters>
        <field>IncidentManagement_State__c</field>
        <operation>equals</operation>
        <value>,Andhra R &amp; T,TAMILNADU_SOUTH,KERALA Chhattisgarh</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Open Cases</label>
</ListView>