ProdIND/ProdPrograms/force-app/main/default/objects/Case/listViews/AML_Cases_List.listView-meta.xml
<ListView>
    <fullName>AML_Cases_List</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.AML_Check</value>
    </filters>
    <label>AML Cases List</label>
</ListView>