ProdIND/ProdPrograms/force-app/main/default/objects/Case/listViews/CMU_AML_Cases.listView-meta.xml
<ListView>
    <fullName>CMU_AML_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Pending with CMU</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.AML_Check</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>CMU AML Cases</value>
    </filters>
    <label>CMU AML Cases</label>
    <sharedTo>
        <role>CMU</role>
        <role>CMU_Team_Lead</role>
    </sharedTo>
</ListView>