ProdIND/ProdPrograms/force-app/main/default/objects/Case/listViews/CMU_AML_Cases_Case.listView-meta.xml
<ListView>
    <fullName>CMU_AML_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CMU AML Cases</label>
    <queue>CMU_AML_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>