ProdIND/ProdPrograms/force-app/main/default/objects/Case/listViews/CMU_Cases_List.listView-meta.xml
<ListView>
    <fullName>CMU_Cases_List</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Case_Owner_Custom__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.CMU_Request</value>
    </filters>
    <label>CMU Cases List</label>
</ListView>