ProdIND/ProdPrograms/force-app/main/default/objects/Case/listViews/Copy_of_My_CMU_Cases.listView-meta.xml
<ListView>
    <fullName>Copy_of_My_CMU_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Priority_Flag__c</columns>
    <filterScope>Mine</filterScope>
    <label>My CMU Cases</label>
    <sharedTo>
        <role>CMU</role>
        <role>CMU_Team_Lead</role>
    </sharedTo>
</ListView>