ProdIND/ProdPrograms/force-app/main/default/objects/Case/listViews/CVO_Pool_Cases.listView-meta.xml
<ListView>
    <fullName>CVO_Pool_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Agent_BL_Code__c</columns>
    <columns>vehicle_category__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TVR__c</columns>
    <filterScope>Queue</filterScope>
    <label>CVO Pool Cases</label>
    <queue>BE_CVO</queue>
</ListView>