ProdIND/ProdPrograms/force-app/main/default/objects/Case/listViews/Incident_Support.listView-meta.xml
<ListView>
    <fullName>Incident_Support</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Loan_Application__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Case_Owner_Custom__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>IncidentManagement_State__c</columns>
    <columns>Agent_BL_Code__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LOB_formulae__c</field>
        <operation>equals</operation>
        <value>PV</value>
    </filters>
    <filters>
        <field>Case_Owner_Custom__c</field>
        <operation>equals</operation>
        <value>RAJESH VENKATESH</value>
    </filters>
    <filters>
        <field>IncidentManagement_State__c</field>
        <operation>equals</operation>
        <value>,HARYANA,KERALA_NORTH,UTTAR_PRADESH_WEST,BIHAR,DELHI</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Incident Support</label>
</ListView>