ProdIND/ProdPrograms/force-app/main/default/objects/Case/listViews/L1_Support_Case.listView-meta.xml
<ListView>
    <fullName>L1_Support_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LOB_formulae__c</columns>
    <columns>LOB__c</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>Affected_User__c</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LOB_formulae__c</field>
        <operation>equals</operation>
        <value>PV</value>
    </filters>
    <label>L1 Support</label>
    <queue>L1_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>