ProdIND/ProdPrograms/force-app/main/default/objects/Case/listViews/L2_Support_Case.listView-meta.xml
<ListView>
    <fullName>L2_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>L2 Support</label>
    <queue>L2_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>